--- a/TT-2016-B045/master_tt.tex
+++ b/TT-2016-B045/master_tt.tex
@@ -134,12 +134,7 @@
 
 %------------------------------------------------------------------------------------------------------------------------------------
 
-\chapter{Estado del Arte.}
-
-\cfinput{archivosTex/estado-arte}
-
-%------------------------------------------------------------------------------------------------------------------------------------
-\chapter{Protocolo Dupless}
+\chapter{Protocolos criptográficos para evitar duplicados}
 
 \cfinput{archivosTex/protocoloDupless}
 
